--- a/index.html
+++ b/index.html
@@ -440,6 +440,8 @@
 
     <div class="step" data-x="9000" data-y="6500" data-rotate-x="70" data-rotate-y="10" data-scale="1">
         <p><b>Thanks!</b></p>
+        <br>
+        <img src="img/r2d2.png" style="margin-left: 500px">
     </div>
 
 </div>
