[FIX] image margin

--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
 
     <div class="step slide" data-x="-5500" data-y="-1500">
         <div style="margin-left: 140px">
-            <q>Web development</q>
+            <q>Web development Group</q>
         </div>
         <br><br>
-        <div style="margin-left: 220px">
+        <div style="margin-left: 270px">
             <img src="img/nodejs.png" alt="">
         </div>
     </div>
@@ -320,7 +320,7 @@
         <p>Overview:</p>
         <img src="img/01.svg">
         <br>
-        <p>Simple use case:</p>
+        <p>Simple use:</p>
         <br>
         <img src="img/02.svg" alt="" style="float: right">
         <img id="luke" src="img/luke2.gif" height="200px" style="float: right">
